[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/EnemyGhost.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemies/enemy_ghost_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/enemy_ghost_1_dead.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "dead",
"speed": 0.0
} ]

[sub_resource type="Animation" id=2]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.85, 0.85 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 21.2872, 21.3166 )

[sub_resource type="Animation" id=4]

resource_name = "die"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]

length = 6.0
loop = true
step = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -100, 0 ), Vector2( 0, 0 ), Vector2( 100, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="EnemyGhost" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="AnimationPlayer_Pulsate" type="AnimationPlayer" parent="AnimatedSprite" index="0"]

root_node = NodePath("..")
autoplay = "default"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/default = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Area2D_Enemy" type="Area2D" parent="AnimatedSprite" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D_Enemy" index="0"]

position = Vector2( -1.58112, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer_Movement" type="AnimationPlayer" parent="AnimatedSprite" index="2"]

root_node = NodePath("..")
autoplay = "movement_left"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/die = SubResource( 4 )
anims/movement_left = SubResource( 5 )
blend_times = [  ]

[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer_Movement" to="." method="_on_AnimationPlayer_Movement_animation_finished"]


